<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.Button"

    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_coverSemester"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                tools:src="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_titleSemester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="20sp"

            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_cover"
            app:layout_constraintTop_toTopOf="@+id/card_cover"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_item_pageSemester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/image_downloadSemester"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_titleSemester"
            app:layout_constraintStart_toEndOf="@+id/card_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_titleSemester"
            tools:text="@string/page" />

        <ImageButton
            android:id="@+id/image_downloadSemester"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"

            android:src="@drawable/ic_baseline_cloud_download"
            app:layout_constraintBottom_toBottomOf="@+id/card_cover"
            app:layout_constraintEnd_toStartOf="@+id/image_shareSemester"
            app:layout_constraintStart_toStartOf="@+id/tv_item_pageSemester"
            app:layout_constraintTop_toTopOf="@+id/tv_item_pageSemester" />

        <ImageButton
            android:id="@+id/image_bookSemester"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_book_24"
            android:background="@android:color/transparent"
            android:visibility="invisible"

            app:layout_constraintBottom_toBottomOf="@+id/card_cover"
            app:layout_constraintEnd_toStartOf="@+id/image_shareSemester"
            app:layout_constraintStart_toStartOf="@+id/tv_item_pageSemester"
            app:layout_constraintTop_toTopOf="@+id/tv_item_pageSemester"
            android:contentDescription="@string/book" />

        <ImageButton
            android:id="@+id/image_shareSemester"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"

            android:src="@drawable/ic_baseline_share"
            app:layout_constraintBottom_toBottomOf="@+id/image_downloadSemester"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_pageSemester"
            app:layout_constraintStart_toEndOf="@+id/image_downloadSemester"
            app:layout_constraintTop_toTopOf="@+id/image_downloadSemester"
            app:layout_constraintVertical_bias="0.578" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>