<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.Button"

    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_coverChat"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                tools:src="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_titleChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_cover"
            app:layout_constraintTop_toTopOf="@+id/card_cover"
            tools:text="@string/studentName" />

        <TextView
            android:id="@+id/tv_item_contentChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"

            app:layout_constraintBottom_toBottomOf="@id/card_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_titleChat"
            tools:text="@string/hiStudent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>